<resources>
    <string name="app_name">任务4第二个程序</string>
    <string name="action_settings">Settings</string>
    <string name="city1">北京</string>
    <string name="city2">石家庄</string>
    <string name="city3">武汉</string>
    <string name="city4">保定</string>
    <string name="city5">邢台</string>
    <string name="city6">上海</string>
    <string name="city7">重庆</string>
    <string name="city8">邯郸</string>
    <string name="city9">洛阳</string>
    <string name="right">答对了!</string>
    <string name="wrong">答错了!</string>
    <string name="reset">清除，重选</string>

</resources>
